Add intro screen

--- a/Iris/Base.lproj/LaunchScreen.storyboard
+++ b/Iris/Base.lproj/LaunchScreen.storyboard
@@ -1,11 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Gaw-of-Uqh">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--View Controller-->
+        <scene sceneID="NZY-6d-S4B">
+            <objects>
+                <viewController id="Gaw-of-Uqh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="R6B-5w-6Vk"/>
+                        <viewControllerLayoutGuide type="bottom" id="QQd-9h-AGM"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="BVC-Jt-o7s">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchScreen" translatesAutoresizingMaskIntoConstraints="NO" id="DrY-h0-jVn">
+                                <rect key="frame" x="128" y="244" width="119" height="179"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="119" id="5Q6-Ka-5Jp"/>
+                                    <constraint firstAttribute="height" constant="179" id="f1m-40-vO0"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" red="0.23529411764705882" green="0.27450980392156865" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="DrY-h0-jVn" firstAttribute="centerY" secondItem="BVC-Jt-o7s" secondAttribute="centerY" id="9iQ-Ww-sGe"/>
+                            <constraint firstItem="DrY-h0-jVn" firstAttribute="centerX" secondItem="BVC-Jt-o7s" secondAttribute="centerX" id="Mk2-bi-AP5"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a9t-xN-DH4" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-3511.1999999999998" y="965.6671664167917"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="LaunchScreen" width="400" height="600"/>
+    </resources>
 </document>
