--- a/Iris/Base.lproj/Main.storyboard
+++ b/Iris/Base.lproj/Main.storyboard
@@ -119,9 +119,51 @@
                                     <navigationItem title="Iris" id="4lJ-Zd-yMn"/>
                                 </items>
                             </navigationBar>
+                            <view hidden="YES" tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ybM-eR-9Pc">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WelcomeNib" translatesAutoresizingMaskIntoConstraints="NO" id="aRL-5g-W8G">
+                                        <rect key="frame" x="138" y="100" width="100" height="100"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="100" id="1IX-jo-4Rv"/>
+                                            <constraint firstAttribute="width" constant="100" id="JPx-yj-MH8"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Iris assist those with visual impariments by translating text found in images to speech or braille viberations." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gK4-Hi-BLz">
+                                        <rect key="frame" x="20" y="210" width="335" height="247"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="26"/>
+                                        <color key="textColor" red="0.39215686274509803" green="0.43137254901960786" blue="0.49803921568627452" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UMB-QT-WWF">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                        <state key="normal">
+                                            <color key="titleColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="dismissFirstLaunch:" destination="rgt-ZQ-V59" eventType="touchUpInside" id="fYB-3m-8vj"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.56925455729999996" green="0.79994032120000003" blue="0.97180447650000001" alpha="0.40000000000000002" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="gK4-Hi-BLz" firstAttribute="top" secondItem="aRL-5g-W8G" secondAttribute="bottom" constant="10" id="3CW-HY-ffy"/>
+                                    <constraint firstItem="UMB-QT-WWF" firstAttribute="leading" secondItem="ybM-eR-9Pc" secondAttribute="leading" id="3lY-NB-NdL"/>
+                                    <constraint firstAttribute="trailing" secondItem="UMB-QT-WWF" secondAttribute="trailing" id="8gl-rT-o31"/>
+                                    <constraint firstItem="aRL-5g-W8G" firstAttribute="top" secondItem="ybM-eR-9Pc" secondAttribute="top" constant="100" id="Jkp-jy-MPd"/>
+                                    <constraint firstItem="gK4-Hi-BLz" firstAttribute="centerY" secondItem="ybM-eR-9Pc" secondAttribute="centerY" id="Wnv-AQ-8Mc"/>
+                                    <constraint firstItem="gK4-Hi-BLz" firstAttribute="leading" secondItem="ybM-eR-9Pc" secondAttribute="leading" constant="20" id="YTl-fw-Gp7"/>
+                                    <constraint firstAttribute="trailing" secondItem="gK4-Hi-BLz" secondAttribute="trailing" constant="20" id="jsy-lE-o8Q"/>
+                                    <constraint firstItem="gK4-Hi-BLz" firstAttribute="centerX" secondItem="ybM-eR-9Pc" secondAttribute="centerX" id="lOr-rz-4Md"/>
+                                    <constraint firstItem="aRL-5g-W8G" firstAttribute="centerX" secondItem="ybM-eR-9Pc" secondAttribute="centerX" id="qpL-7I-2pZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="UMB-QT-WWF" secondAttribute="bottom" id="whq-gE-WSf"/>
+                                    <constraint firstItem="UMB-QT-WWF" firstAttribute="top" secondItem="ybM-eR-9Pc" secondAttribute="top" id="yuW-dE-XfD"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="ybM-eR-9Pc" secondAttribute="trailing" id="5fN-PP-NCd"/>
                             <constraint firstAttribute="trailing" secondItem="gqT-Vh-o5Y" secondAttribute="trailing" id="82z-FE-R6G"/>
                             <constraint firstItem="g4c-1l-dly" firstAttribute="top" secondItem="gqT-Vh-o5Y" secondAttribute="bottom" id="9Ge-Q6-H4c"/>
                             <constraint firstItem="TAC-HC-iVx" firstAttribute="leading" secondItem="TN5-if-D5V" secondAttribute="leading" id="Ap9-FJ-MSd"/>
@@ -131,11 +173,14 @@
                             <constraint firstAttribute="trailing" secondItem="6Np-lH-PN7" secondAttribute="trailing" id="Ouy-Eq-Hjj"/>
                             <constraint firstAttribute="trailing" secondItem="6Np-lH-PN7" secondAttribute="trailing" id="Rm0-ZP-p5E"/>
                             <constraint firstItem="TAC-HC-iVx" firstAttribute="top" secondItem="g4c-1l-dly" secondAttribute="bottom" constant="1" id="Svw-uH-sQD"/>
+                            <constraint firstItem="MIg-ad-B9V" firstAttribute="top" secondItem="ybM-eR-9Pc" secondAttribute="bottom" id="TP2-ad-6Vm"/>
                             <constraint firstItem="6Np-lH-PN7" firstAttribute="leading" secondItem="TN5-if-D5V" secondAttribute="leading" id="UNS-dO-4fO"/>
                             <constraint firstItem="gqT-Vh-o5Y" firstAttribute="top" secondItem="6Np-lH-PN7" secondAttribute="bottom" id="UfD-KM-Gmd"/>
                             <constraint firstItem="MIg-ad-B9V" firstAttribute="top" secondItem="9Pc-Ua-KtM" secondAttribute="bottom" id="VgQ-jE-xmz"/>
                             <constraint firstAttribute="trailing" secondItem="g4c-1l-dly" secondAttribute="trailing" id="bru-vE-HmI"/>
+                            <constraint firstItem="ybM-eR-9Pc" firstAttribute="leading" secondItem="TN5-if-D5V" secondAttribute="leading" id="d77-dc-0et"/>
                             <constraint firstItem="6Np-lH-PN7" firstAttribute="leading" secondItem="TN5-if-D5V" secondAttribute="leading" id="ebI-GW-frC"/>
+                            <constraint firstItem="ybM-eR-9Pc" firstAttribute="top" secondItem="TN5-if-D5V" secondAttribute="top" id="f6a-b6-Nu0"/>
                             <constraint firstItem="9Pc-Ua-KtM" firstAttribute="leading" secondItem="TAC-HC-iVx" secondAttribute="trailing" constant="1" id="gj0-qs-OZF"/>
                             <constraint firstItem="9Pc-Ua-KtM" firstAttribute="height" secondItem="TAC-HC-iVx" secondAttribute="height" id="hSy-S0-4RL"/>
                             <constraint firstItem="MIg-ad-B9V" firstAttribute="top" secondItem="TAC-HC-iVx" secondAttribute="bottom" id="jFh-yr-8Zu"/>
@@ -148,6 +193,7 @@
                     </view>
                     <connections>
                         <outlet property="buttonGuardView" destination="g4c-1l-dly" id="FKa-cY-SX2"/>
+                        <outlet property="firstLaunch" destination="ybM-eR-9Pc" id="FfM-Gm-9Kw"/>
                         <outlet property="textView" destination="gqT-Vh-o5Y" id="kSP-YV-BHZ"/>
                     </connections>
                 </viewController>
@@ -188,13 +234,6 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HlP-tY-Kzl">
-                                <rect key="frame" x="0.0" y="667" width="54" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <connections>
-                                    <action selector="analyzePhoto:" destination="jdZ-aw-zuS" eventType="touchUpInside" id="nMC-xG-j5y"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fx8-x9-OzR">
                                 <rect key="frame" x="0.0" y="64" width="375" height="35"/>
                                 <color key="backgroundColor" red="0.56925455729166663" green="0.79994032118055558" blue="0.97180447648611112" alpha="1" colorSpace="calibratedRGB"/>
@@ -315,6 +354,7 @@
         <image name="PhotoLibrary" width="200" height="200"/>
         <image name="TakePhoto" width="200" height="200"/>
         <image name="Translate" width="400" height="200"/>
+        <image name="WelcomeNib" width="200" height="200"/>
         <image name="navigationBar:6Np-lH-PN7:shadowImage" width="50" height="600">
             <mutableData key="keyedArchiveRepresentation">
 YnBsaXN0MDDUAQIDBAUGOzxYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoK0HCBMU
