Character parser completed, connect with viberation map

--- a/Iris/Base.lproj/Main.storyboard
+++ b/Iris/Base.lproj/Main.storyboard
@@ -12,7 +12,7 @@
         <!--View Controller-->
         <scene sceneID="jQ6-8S-iML">
             <objects>
-                <viewController id="rgt-ZQ-V59" customClass="ViewController" customModule="Iris" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="ViewController" storyboardIdentifier="ViewController" id="rgt-ZQ-V59" customClass="ViewController" customModule="Iris" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="uY8-dz-aib"/>
                         <viewControllerLayoutGuide type="bottom" id="MIg-ad-B9V"/>
@@ -68,13 +68,13 @@
                                     <constraint firstAttribute="height" constant="80" id="tqR-1y-Q19"/>
                                 </constraints>
                             </view>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Hello World" translatesAutoresizingMaskIntoConstraints="NO" id="gqT-Vh-o5Y">
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gqT-Vh-o5Y">
                                 <rect key="frame" x="0.0" y="116" width="375" height="270"/>
                                 <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="270" id="3fK-y5-mM1"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                 <connections>
                                     <outlet property="delegate" destination="rgt-ZQ-V59" id="HYe-NL-47a"/>
@@ -236,7 +236,7 @@
                             </navigationBar>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fx8-x9-OzR">
                                 <rect key="frame" x="0.0" y="64" width="375" height="35"/>
-                                <color key="backgroundColor" red="0.56925455729166663" green="0.79994032118055558" blue="0.97180447648611112" alpha="1" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="0.23529411764705882" green="0.27450980392156865" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="35" id="0MA-wb-Sit"/>
                                     <constraint firstAttribute="height" constant="35" id="2AZ-r1-Ys8"/>
@@ -246,49 +246,46 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="okc-6B-QlS">
-                                <rect key="frame" x="0.0" y="99" width="187" height="188.5"/>
-                                <color key="backgroundColor" red="0.23529411764705882" green="0.27450980392156865" blue="0.3411764705882353" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="0.0" y="99" width="187" height="188"/>
+                                <color key="backgroundColor" red="0.59607843137254901" green="0.87450980392156863" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <state key="normal">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
                                 <connections>
                                     <action selector="aButton:" destination="jdZ-aw-zuS" eventType="touchUpInside" id="x73-L0-0Q4"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sVa-M2-Eci">
-                                <rect key="frame" x="188" y="98" width="187" height="188.5"/>
-                                <color key="backgroundColor" red="0.23529411759999999" green="0.27450980390000002" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="188" y="99" width="187" height="188"/>
+                                <color key="backgroundColor" red="0.59607843137254901" green="0.87450980392156863" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="bButton:" destination="jdZ-aw-zuS" eventType="touchUpInside" id="PKH-Fa-Egm"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dBn-aC-fAB">
-                                <rect key="frame" x="0.0" y="288.5" width="187" height="189"/>
-                                <color key="backgroundColor" red="0.23529411759999999" green="0.27450980390000002" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="0.0" y="288" width="187" height="189"/>
+                                <color key="backgroundColor" red="0.4823529411764706" green="0.84313725490196079" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="cButton:" destination="jdZ-aw-zuS" eventType="touchUpInside" id="GOt-NJ-wpR"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kxk-C8-cTa">
-                                <rect key="frame" x="188" y="287.5" width="187" height="189"/>
-                                <color key="backgroundColor" red="0.23529411759999999" green="0.27450980390000002" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="188" y="288" width="187" height="189"/>
+                                <color key="backgroundColor" red="0.4823529411764706" green="0.84313725490196079" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="dButton:" destination="jdZ-aw-zuS" eventType="touchUpInside" id="7yO-wQ-a4q"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hgV-t0-DK1">
-                                <rect key="frame" x="188" y="477.5" width="187" height="188.5"/>
-                                <color key="backgroundColor" red="0.23529411759999999" green="0.27450980390000002" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="188" y="478" width="187" height="188"/>
+                                <color key="backgroundColor" red="0.3529411764705882" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="fButton:" destination="jdZ-aw-zuS" eventType="touchUpInside" id="gfX-5S-n3T"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aMO-bf-Ua9">
-                                <rect key="frame" x="0.0" y="478.5" width="187" height="188.5"/>
-                                <color key="backgroundColor" red="0.23529411759999999" green="0.27450980390000002" blue="0.3411764706" alpha="1" colorSpace="calibratedRGB"/>
-                                <state key="normal" title="Button"/>
+                                <rect key="frame" x="0.0" y="478" width="187" height="188"/>
+                                <color key="backgroundColor" red="0.3529411764705882" green="0.80000000000000004" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <connections>
                                     <action selector="eButton:" destination="jdZ-aw-zuS" eventType="touchUpInside" id="BBf-Io-kOk"/>
                                 </connections>
